--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2DScript</title>
-  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div id="game">
-
-  </div>
+  <div id="app"></div>
 
   <script src="../dist/index.js"></script>
 </body>
